argocd/users/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dstrategies-back-offline
  labels:
    app: dstrategies-back
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: dstrategies-back
---
apiVersion: v1
kind: Service
metadata:
  name: dstrategies-back-online
  labels:
    app: dstrategies-back
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: dstrategies-back
